fix mobile alignment subtitle timeline

--- a/src/app/shared/components/timeline/timeline.component.scss
+++ b/src/app/shared/components/timeline/timeline.component.scss
@@ -2,7 +2,7 @@ h1 {
   @apply mb-0 font-700  text-yellow-3  xs:text-base md:text-2xl;
 }
 h2 {
-  @apply font-700 text-white xs:text-sm md:text-xl;
+  @apply mb-0 font-700 text-white xs:text-sm md:text-xl;
 }
 p {
   @apply text-justify text-gray xs:pt-2 xs:text-base md:pt-3 md:text-lg;
@@ -20,6 +20,7 @@ p {
   display: flex;
   align-items: center;
   margin-top: 1rem;
+  gap: 0.5rem;
 }
 
 .data .title::before {
@@ -73,5 +74,5 @@ p {
 
 .timeline .timeline-item .content .title {
   display: flex;
-  // align-items: center;
+  gap: 0.5rem;
 }
